--- a/React_component/task_0/dashboard/src/Footer/Footer.css
+++ b/React_component/task_0/dashboard/src/Footer/Footer.css
@@ -1,10 +1,10 @@
+/* App-footer */
+
 .App-footer {
-    border-top: 4px solid red;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .App-footer p {
-    font-style: italic;
-  }
+  font-style: italic;
+  border-top: 4px solid var(--holb-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 5vmin;
+}
